--- a/app/src/main/res/layout/activity_til.xml
+++ b/app/src/main/res/layout/activity_til.xml
@@ -6,56 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.tarcuri.til.TILActivity">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="183dp"
-        android:layout_height="43dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Select Device"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/refresh_device_button"
-        app:layout_constraintEnd_toStartOf="@+id/refresh_device_button" />
-
     <Button
-        android:id="@+id/refresh_device_button"
-        android:layout_width="87dp"
-        android:layout_height="47dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:onClick="refreshDeviceList"
-        android:text="Refresh"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/device_list"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ListView
-        android:id="@+id/device_list"
-        android:layout_width="318dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/refresh_device_button" />
-
-    <Button
-        android:id="@+id/start_log_button"
+        android:id="@+id/connect_lc1_button"
         android:layout_width="225dp"
         android:layout_height="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:elevation="0dp"
         android:onClick="startLogger"
-        android:text="Start Logging"
-        android:visibility="invisible"
+        android:text="Connect to LC-1"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/device_list" />
+        tools:layout_editor_absoluteX="80dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/refresh_device_button" />
 
     <Button
         android:id="@+id/view_log_button"
@@ -67,5 +32,68 @@
         android:text="View / Share Logs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_log_button" />
+        app:layout_constraintTop_toBottomOf="@+id/connect_lc1_button"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/connect_lc1_button" />
+
+    <Button
+        android:id="@+id/refresh_device_button"
+        android:layout_width="225dp"
+        android:layout_height="50dp"
+        android:text="Refresh Device List"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/device_list"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="192dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="61dp"
+        android:fontFamily="monospace"
+        android:text="Select Device:"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <ListView
+        android:id="@+id/device_list"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="143dp"
+        android:layout_height="56dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="42dp"
+        android:fontFamily="monospace"
+        android:text="T.I.L."
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
