--- a/app/src/main/res/layout/activity_til.xml
+++ b/app/src/main/res/layout/activity_til.xml
@@ -41,13 +41,14 @@
         android:id="@+id/refresh_device_button"
         android:layout_width="225dp"
         android:layout_height="50dp"
-        android:text="Refresh Device List"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/device_list"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:layout_marginTop="28dp"
+        android:onClick="refreshDeviceList"
+        android:text="Refresh Device List"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/device_list" />
 
     <TextView
         android:id="@+id/textView"
