--- a/app/src/main/res/layout/activity_til.xml
+++ b/app/src/main/res/layout/activity_til.xml
@@ -106,6 +106,7 @@
         android:layout_marginTop="8dp"
         android:onClick="showSettings"
         android:text="Settings"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/view_log_button"
         app:layout_constraintTop_toBottomOf="@+id/view_log_button" />
 </android.support.constraint.ConstraintLayout>
